--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place_extra.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place_extra.xml
@@ -36,7 +36,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:textAllCaps="false"
-        android:onClick="newPlaceImageTapped"/>
+        android:onClick="newPlaceImageTapped"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/white"/>
 
     <EditText
         android:id="@+id/extraNotes"
