--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place.xml
@@ -65,7 +65,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/extraNotesButton"
@@ -78,5 +78,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:textAllCaps="false"
         android:gravity="center"
-        android:onClick="extraNotesTapped"/>
+        android:onClick="extraNotesTapped"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/white"/>
 </android.support.constraint.ConstraintLayout>
