--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_places_list_view.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_places_list_view.xml
@@ -7,39 +7,21 @@
     android:layout_height="match_parent"
     tools:context="com.example.siddharth.globetrotter.PlacesListView">
 
-    <ImageView
-        android:id="@+id/placeThumbnailImage"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@string/placethumbnailimage"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
-
     <TextView
         android:id="@+id/placeName"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="16dp"
         android:text="@string/textview"
-        app:layout_constraintLeft_toRightOf="@+id/placeThumbnailImage"
         app:layout_constraintRight_toLeftOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintBottom_toBottomOf="@+id/placeThumbnailImage"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0"
         android:gravity="left|center"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
