--- a/Android_Final/Siddharth_Final/app/src/main/res/layout/activity_outdoor_detail.xml
+++ b/Android_Final/Siddharth_Final/app/src/main/res/layout/activity_outdoor_detail.xml
@@ -29,8 +29,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="LabelFor"
-        app:layout_constraintHorizontal_bias="0.502" />
+        tools:ignore="LabelFor"/>
 
     <ImageView
         android:id="@+id/outdoorImage"
